--- a/_sass/landing-home.scss
+++ b/_sass/landing-home.scss
@@ -7,8 +7,7 @@
   border-color: transparent;
   border-style: solid;
   background:
-      linear-gradient(to bottom, rgba(0,0,0,.35), rgba(0,0,0,.8)),
-      #a3a3a3 no-repeat fixed 50% 50%;
+      url(https://images.unsplash.com/photo-1489617482379-fc98cdb77efb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjExMDk0fQ&auto=format&fit=crop&w=2089&q=80);
   background-position: center;
   background-size: cover;
 
