Update image url, move resource to aliyun

--- a/_sass/landing-home.scss
+++ b/_sass/landing-home.scss
@@ -7,7 +7,7 @@
   border-color: transparent;
   border-style: solid;
   background:
-      url(http://q4cgib48a.bkt.clouddn.com/blog-background.jpeg);
+      url(https://alain-hsu-blog.oss-cn-shenzhen.aliyuncs.com/blog-background.jpeg);
   background-position: center;
   background-size: cover;
 
